--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title> GIS </title>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,
+initial-scale=1.0">
 
     <!-- add link later-->
     <base href="" target="_self">
